# rust-hashlib

./: .travis.yml  Cargo.toml  README.md
algorithms/: Cargo.toml
algorithms/src/: blake2b.rs  keccak.rs  lib.rs  md5.rs  sha1.rs  sha2.rs
prelude/: Cargo.toml
prelude/src/: algorithm.rs  lib.rs
prelude/src/hashable/: as_ref.rs  for_each.rs  mod.rs
src/: lib.rs
